# Passport-Reader-App

./: gradle.properties  local.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  zinterface.cpp
app/src/main/cpp/engine/: Binarization.cpp  FindRecogDigit.cpp  FindRecogDigit.h  Histogram.cpp  ImageBase.cpp  ImageBase.h  ImageFilter.cpp  ImageFilter.h  LineRecogPrint.cpp  LineRecogPrint.h  Recog.cpp  RecogCore.cpp  RecogCore.h.bak  RecogMQDF.cpp  Rotation.cpp  StdAfx.cpp  StdAfx.h  TRunProc.h
app/src/main/java/com/card/camera/: CameraHolder.java  FocusManager.java
app/src/main/java/com/passport/scan/: CameraActivity.java  RecogEngine.java  RecogResult.java  ResultActivity.java  SplashActivity.java  Util.java
app/src/main/res/layout/: camera_activity.xml  result_activity.xml  splash_activity.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
